MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/PaymentPlanChangeLine__c.object-meta.xml
<CustomObject>
    <label>PaymentPlanChangeLine</label>
    <nameField>
        <displayFormat>PPCL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentPlanChangeLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>