MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <label>Change Request</label>
    <referenceTo>PaymentPlanChangeRequest__c</referenceTo>
    <relationshipLabel>PaymentPlanChangeLines</relationshipLabel>
    <relationshipName>PaymentPlanChangeLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>