MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Existing_SO_Installment__c.field-meta.xml
<CustomField>
    <fullName>Existing_SO_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing SO Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>PaymentPlanChangeLines</relationshipLabel>
    <relationshipName>PaymentPlanChangeLines</relationshipName>
    <type>Lookup</type>
</CustomField>