MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Installment_Name__c.field-meta.xml
<CustomField>
    <fullName>Installment_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Installment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>