MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>