MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Number__c</fullName>
    <label>Milestone Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>