MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Needs_Unallocation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Unallocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Unallocation</label>
    <type>Checkbox</type>
</CustomField>