MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanChangeLine__c/fields/Payment_Installment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Installment</label>
    <referenceTo>PaymentInstallements__c</referenceTo>
    <relationshipLabel>PaymentPlanChangeLines</relationshipLabel>
    <relationshipName>PaymentPlanChangeLines</relationshipName>
    <type>Lookup</type>
</CustomField>